Rewrite to keep all the logic in one place.